--- a/src/main/resources/static/css/mypage/mypage.css
+++ b/src/main/resources/static/css/mypage/mypage.css
@@ -1,3 +1,13 @@
+main{
+    padding-top:141px; /* header와 nav의 높이에 따라 조정 */
+    padding-bottom: 50px;
+    height: 100%;
+}
+
+.body_container{
+    padding : 30px 0px;
+}
+
 .profile_container{
     display: flex;
     justify-content: space-between;
@@ -30,6 +40,8 @@
     margin: 30px;
     border: solid 1px #AEAEAE;
     border-radius: 5px;
+    background-color : #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .buy_title, .wish_title{
