--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -1,60 +1,72 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="/css/mypage/mypage.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/css/header_foter/header.css" />
+    <link rel="stylesheet" href="/css/header_foter/foter.css" />
+    <script type="text/javascript" src="/js/mypage/mypage.js" defer></script>
 </head>
 <body>
-<div class="profile_container">
-    <div class="profile_content">
-        <h4>jueun님</h4>
-        <p>010-1111-1111 / test@korea.com</p>
-    </div>
-    <input type="button" onclick="#" value="내 정보 수정하기">
-</div>
-<div class="buy_container">
-    <div class="buy_title">
-        <h5>구매 내역</h5>
-        <p onclick="#">더보기 ></p>
-    </div>
-    <div class="buy_button">
-        <input type="radio" id="buy0" name="buy" value="0" onclick="buyCheck(0)" checked>
-        <label for="buy0">항공</label>
-        <input type="radio" id="buy1" name="buy" value="1" onclick="buyCheck(1)">
-        <label for="buy1">숙박</label>
-        <input type="radio" id="buy2" name="buy" value="2" onclick="buyCheck(2)">
-        <label for="buy2">티켓</label>
-        <input type="radio" id="buy3" name="buy" value="3" onclick="buyCheck(3)">
-        <label for="buy3">패키지</label>
-    </div>
-    <div class="buy_content">
-        <div>
+    <main>
+        <div th:replace="header_foter/header :: header"></div>
+        <div class="body_container">
+            <div class="profile_container">
+                <div class="profile_content">
+                    <input type="hidden" id="id" name="id" th:value="${session.id}">
+                    <h4>[[${vo.getUserName()}]] 님</h4>
+                    <p>[[${vo.getUserTell()}]] / [[${vo.getUserEmail()}]]</p>
+                </div>
+                <input type="button" onclick="proEditor()" value="내 정보 수정하기">
+            </div>
 
-        </div>
-    </div>
-</div>
-<div class="wish_container">
-    <div class="wish_title">
-        <h5>찜한 목록</h5>
-        <p onclick="#">더보기 ></p>
-    </div>
-    <div class="wish_button">
-        <input type="radio" id="wish0" name="wish" value="0" onclick="wishCheck(0)" checked>
-        <label for="wish0">항공</label>
-        <input type="radio" id="wish1" name="wish" value="1" onclick="wishCheck(1)">
-        <label for="wish1">숙박</label>
-        <input type="radio" id="wish2" name="wish" value="2" onclick="wishCheck(2)">
-        <label for="wish2">티켓</label>
-        <input type="radio" id="wish3" name="wish" value="3" onclick="wishCheck(3)">
-        <label for="wish3">패키지</label>
-    </div>
-    <div class="wish_content">
-        <div>
+            <div class="buy_container">
+                <div class="buy_title">
+                    <h5>구매 내역</h5>
+                    <p onclick="#">더보기 ></p>
+                </div>
+                <div class="buy_button">
+                    <input type="radio" id="buy0" name="buy" value="0" onclick="buyCheck(0)" checked>
+                    <label for="buy0">항공</label>
+                    <input type="radio" id="buy1" name="buy" value="1" onclick="buyCheck(1)">
+                    <label for="buy1">숙박</label>
+                    <input type="radio" id="buy2" name="buy" value="2" onclick="buyCheck(2)">
+                    <label for="buy2">티켓</label>
+                    <input type="radio" id="buy3" name="buy" value="3" onclick="buyCheck(3)">
+                    <label for="buy3">패키지</label>
+                </div>
+                <div class="buy_content">
+                    <div>
 
+                    </div>
+                </div>
+            </div>
+
+            <div class="wish_container">
+                <div class="wish_title">
+                    <h5>찜한 목록</h5>
+                    <p onclick="#">더보기 ></p>
+                </div>
+                <div class="wish_button">
+                    <input type="radio" id="wish0" name="wish" value="0" onclick="wishCheck(0)" checked>
+                    <label for="wish0">항공</label>
+                    <input type="radio" id="wish1" name="wish" value="1" onclick="wishCheck(1)">
+                    <label for="wish1">숙박</label>
+                    <input type="radio" id="wish2" name="wish" value="2" onclick="wishCheck(2)">
+                    <label for="wish2">티켓</label>
+                    <input type="radio" id="wish3" name="wish" value="3" onclick="wishCheck(3)">
+                    <label for="wish3">패키지</label>
+                </div>
+                <div class="wish_content">
+                    <div>
+
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
+        <div th:replace="header_foter/foter :: foter"></div>
+    </main>
 </body>
 </html>
