--- a/src/main/resources/templates/air/seatSelection.html
+++ b/src/main/resources/templates/air/seatSelection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Seat Selection</title>
-    <link rel="stylesheet" href="/css/air/seatSelection.css">
+    <link rel="stylesheet" href="/css/airplane/seatSelection.css">
 </head>
 <body>
 <main>
