--- a/src/main/resources/templates/ticket/ticketDetails.html
+++ b/src/main/resources/templates/ticket/ticketDetails.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/header_foter/header.css" />
     <link rel="stylesheet" href="/css/ticket/ticketDetails.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <script src="/js/ticket/ticketDetails.js" defer></script>
     <title>티켓 상세 정보</title>
 </head>
@@ -34,7 +34,18 @@
                 <p th:text="${ticket.tickText}">티켓 설명</p>
                 <p th:text="${ticket.tickOp}">운영 시간</p>
                 <p>날짜: <span th:text="${#dates.format(ticket.tickDate, 'yyyy-MM-dd')}">날짜</span></p>
+                <!-- 여기에 시간 정보 추가 -->
+                <p>이용 시간: <span th:text="${#dates.format(ticket.tickTime, 'HH:mm')}">이용 시간</span></p>
                 <p class="price" th:text="${#numbers.formatDecimal(ticket.tickPrice, 0, 'COMMA', 0, 'POINT')} + '원'">가격</p>
+
+                <div class="quantity-selector">
+                    <label for="ticketQuantity">인원수:</label>
+                    <input type="number" id="ticketQuantity" name="ticketQuantity" min="1" value="1">
+                </div>
+
+                <!-- 총 가격 표시 -->
+                <p class="total-price">총 가격: <span id="totalPrice"></span></p>
+
                 <button class="reserve-btn" onclick="payTicket()">결제하기</button>
             </div>
         </div>
@@ -42,13 +53,17 @@
 </main>
 
 <footer>
-
+    <!-- 푸터 내용 -->
 </footer>
+
 <script th:inline="javascript">
     /*<![CDATA[*/
     var isLoggedIn = [[${session.id != null}]];
-    var ticketBindId = [[${ticket.binID}]];
+    var ticketTickNO = [[${ticket.tickNO}]];
+    var ticketPrice = [[${ticket.tickPrice}]];
+    var ticketTime = [[${#dates.format(ticket.tickTime, 'HH:mm')}]];
     /*]]>*/
 </script>
+
 </body>
 </html>
